queXS 1.14.4 - Changes since 1.14.3

Fourth bug fix release.

Fixed issue: Wrong template appearing for self complete respondents
Fixed issue: Appointment minimum time was 15 minutes
Fixed issue: Admin page failing to appear due to PHP notice

Translations have also been updated - thank you again!

queXS 1.14.3 - Changes since 1.14.2

The third bug fix release for the 1.14 series of queXS.

Fixed issue: More than 2 character long locale code not being recognised
Fixed issue: Method return value error
Fixed issue: Numbers starting with 0 were being stripped
Fixed issue: Appointments not working when no shifts scheduled and local timezone is different from respondent
Fixed issue: lp:1620421 SQL not compatible with ONLY_FULL_GROUP_BY mode

New feature: Allow operators to see upcoming appointments and assign to themselves if necessary

Database update (Please note - if you are having issues with custom outcomes - please run this code on your database):

ALTER TABLE `outcome` AUTO_INCREMENT = 100;


queXS 1.14.2 - Changes since 1.14.1

A bug fix release for the 1.14 series of queXS

Fixed issue: Call attempts can exist with no calls - clear them out
Fixed issue: Samples with call attempt time slots assigned will still draw new numbers out of defined times
Fixed issue: Importing CSV with empty columns at end of file causing failure
Fixed issue: Cannot delete outcomes

Translations have been updated - thank you for your continued contributions!


queXS 1.14.1 - Changes since 1.14.0

New feature: CAS Authentication

Fixed bug: When self completing group by group or all-in-one, numeric key presses may change previous answers
Fixed bug: lp:1528293 fix and translated outcomes descriptions, added 'outcome id' to output (thanks Alex)
Fixed bug: lp:1527201 output to csv in dataoutput.php (thanks Alex)
Fixed bug: lp:1527201 (thanks Alex)
Fixed bug: Removed extraneous documentation

Thank you again to those who contributed translations - these have been updated.

