@@ -1,3 +1,6 @@
+INSERT INTO `sample_var_type` (`type`, `description`, `table`) VALUES(9, 'Token', '');
+
+
 queXS 1.14.4 - Changes since 1.14.3
 
 Fourth bug fix release.
